--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.11.0
   firebase_auth: ^5.4.2
+  firebase_storage: ^12.4.2
+  image_picker: ^1.1.2
+  cloud_firestore: ^5.6.3
 
 dev_dependencies:
   flutter_test:
