--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_storage: ^12.4.2
   image_picker: ^1.1.2
   cloud_firestore: ^5.6.3
+  audioplayers: ^6.4.0
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,7 @@ flutter:
   assets:
     - assets/images/logo.png
     - assets/aliments.json
+    - assets/sounds/complete_sound.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
