--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   image_picker: ^1.1.2
   cloud_firestore: ^5.6.3
   audioplayers: ^6.4.0
+  fl_chart: ^0.70.2
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
