--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   audioplayers: ^6.4.0
   fl_chart: ^0.70.2
   flutter_svg: ^2.0.17
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
