--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_svg: ^2.0.17
   font_awesome_flutter: ^10.8.0
   video_player: ^2.9.5
+  video_player_win: ^3.1.1
 
 dev_dependencies:
   flutter_test:
